Fixing warnings and bugs & added Contact Support / Send Feedback options

--- a/Stories/PopOverController.xib
+++ b/Stories/PopOverController.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="PopOverController" customModule="Meditor" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="PopOverController" customModule="Stories" customModuleProvider="target">
             <connections>
                 <outlet property="bearerIdTextField" destination="VPL-xa-TOn" id="6yM-Eo-GCg"/>
                 <outlet property="errorMsg" destination="JcF-kI-i0j" id="Wc1-UY-eaf"/>
@@ -20,7 +20,6 @@
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GaQ-Bv-mGp">
                     <rect key="frame" x="95" y="94" width="120" height="17"/>
-                    <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Integration Token" id="v9k-aA-as4">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -29,7 +28,6 @@
                 </textField>
                 <button identifier="save" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P2T-32-FDH">
                     <rect key="frame" x="402" y="13" width="70" height="32"/>
-                    <animations/>
                     <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="IIi-Va-d5A">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -40,7 +38,6 @@
                 </button>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ssJ-8e-Q6J">
                     <rect key="frame" x="95" y="178" width="312" height="23"/>
-                    <animations/>
                     <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Sign in to your Medium account.              " allowsEditingTextAttributes="YES" id="awc-Fb-Acy">
                         <font key="font" metaFont="systemBold" size="19"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -49,7 +46,6 @@
                 </textField>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qSI-KP-7yT">
                     <rect key="frame" x="95" y="107" width="373" height="54"/>
-                    <animations/>
                     <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="You can get your Integration Token at the botton of the Settings page of your Medium Account" allowsEditingTextAttributes="YES" id="ugc-Fg-unw">
                         <font key="font" metaFont="system" size="14"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -58,7 +54,6 @@
                 </textField>
                 <textField identifier="bearerIdTextField" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VPL-xa-TOn">
                     <rect key="frame" x="97" y="59" width="369" height="27"/>
-                    <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="8eM-aF-ZQ6">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -70,12 +65,10 @@
                 </textField>
                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uEg-oP-yv9">
                     <rect key="frame" x="31" y="153" width="48" height="48"/>
-                    <animations/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="MediumLogo" id="3bA-wy-9dg"/>
                 </imageView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" placeholderIntrinsicWidth="48" placeholderIntrinsicHeight="17" translatesAutoresizingMaskIntoConstraints="NO" id="JcF-kI-i0j">
                     <rect key="frame" x="95" y="24" width="216" height="17"/>
-                    <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="MhS-eb-cfW">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -87,7 +80,6 @@
                 </textField>
                 <button identifier="cancel" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GJS-fV-jPp">
                     <rect key="frame" x="322" y="13" width="80" height="32"/>
-                    <animations/>
                     <buttonCell key="cell" type="push" title="cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="DLN-jQ-i8B">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -97,7 +89,6 @@
                     </buttonCell>
                 </button>
             </subviews>
-            <animations/>
             <point key="canvasLocation" x="211" y="278.5"/>
         </customView>
     </objects>
